BusOne/src/objects/Product_Metrics_vod__c.object
<CustomObject>
    <description>This object stores all metrics available for all accounts. Each metric is specific to a product, so the logical key is (account, product).</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Account is the master object for product metrics.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Metrics</relationshipLabel>
        <relationshipName>Product_Metrics_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Awareness__c</fullName>
        <description>Sample metric field.</description>
        <label>Awareness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unaware</fullName>
                </value>
                <value>
                    <fullName>Developing</fullName>
                </value>
                <value>
                    <fullName>Aware</fullName>
                </value>
                <value>
                    <fullName>Prefers</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detail_Group_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Product Catalog records of type Detail Group.</description>
        <label>Detail Group</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Metrics (Detail Group)</relationshipLabel>
        <relationshipName>Product_Metrics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Engagements__c</fullName>
        <description>Sample metric field.</description>
        <label>Engagements</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Formulary_Status__c</fullName>
        <description>Sample metric field.</description>
        <label>Formulary Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Formulary</fullName>
                </value>
                <value>
                    <fullName>On/Restricted</fullName>
                </value>
                <value>
                    <fullName>On/Prior Auth</fullName>
                </value>
                <value>
                    <fullName>On/Exclusive</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigator_Readiness__c</fullName>
        <description>Sample metric field.</description>
        <label>Investigator Readiness</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Beginner</fullName>
                </value>
                <value>
                    <fullName>Experienced</fullName>
                </value>
                <value>
                    <fullName>Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Child_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that gets stamped with the Child Account of the Child Account record</description>
        <label>Location Child</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Metrics (Location Child)</relationshipLabel>
        <relationshipName>Product_Metrics_Location_Child_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Parent_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that gets stamped with the Parent Account of the Child Account record</description>
        <label>Location Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Metrics (Location Parent)</relationshipLabel>
        <relationshipName>Product_Metrics_Location_Parent_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship where the product metrics are set</description>
        <label>Location</label>
        <referenceTo>Child_Account_vod__c</referenceTo>
        <relationshipLabel>Product Metrics</relationshipLabel>
        <relationshipName>Product_Metrics_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Movement__c</fullName>
        <description>Sample metric field.</description>
        <label>Movement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Products_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The products field is required and shows which product relates to the metric row.</description>
        <label>Products</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Product Metrics</relationshipLabel>
        <relationshipName>Products_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Sample metric field.</description>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>Grow</fullName>
                </value>
                <value>
                    <fullName>Guard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Stage__c</fullName>
        <description>Sample metric field.</description>
        <label>Selling Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Launch</fullName>
                </value>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Post-Launch</fullName>
                </value>
                <value>
                    <fullName>Pull Through</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speaker_Skills__c</fullName>
        <description>Sample metric field.</description>
        <label>Speaker Skills</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Novice</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X12_mo_trx_chg__c</fullName>
        <description>Sample metric field.</description>
        <label>12 mo TRx Chg</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Product Metrics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Product Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>